apply plugin: 'com.android.application'

android {
    compileSdk = 36
    defaultConfig {
        applicationId "sergirex.portadasperiodicos"
        minSdkVersion 23
        targetSdkVersion 36
        versionCode 73
        versionName "6.5.0"
        multiDexEnabled true
    }
    buildTypes {
        release {
            shrinkResources true
            minifyEnabled true
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'),
                    'proguard-rules.pro'
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_17
        targetCompatibility JavaVersion.VERSION_17
    }
    namespace 'sergirex.portadasperiodicos'
    /*lint {
        disable 'RestrictedApi'
    }*/
}

dependencies {
    implementation fileTree(dir: 'libs', include: ['*.jar'])
    implementation 'androidx.appcompat:appcompat:1.7.1'
    implementation 'com.google.android.material:material:1.13.0'
    implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
    implementation 'androidx.core:core:1.17.0'
    implementation 'androidx.constraintlayout:constraintlayout:2.2.1'
    implementation 'androidx.preference:preference:1.2.1'
    implementation 'androidx.browser:browser:1.9.0'
    implementation 'com.jsibbold:zoomage:1.3.1'
    implementation 'com.squareup.picasso:picasso:2.71828'
    implementation 'androidx.multidex:multidex:2.0.1'
    implementation 'com.android.billingclient:billing:8.1.0'
//    implementation 'com.google.guava:guava:33.5.0-jre'
    implementation 'com.google.android.play:review:2.0.2'
    implementation 'androidx.activity:activity:1.11.0'
    testImplementation 'junit:junit:4.13.2'
    androidTestImplementation 'androidx.test.espresso:espresso-core:3.7.0'
    implementation 'com.facebook.android:audience-network-sdk:6.21.0'
    compileOnly "com.facebook.infer.annotation:infer-annotation:0.18.0"
}
